--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prettier-all": "prettier --loglevel error --config-precedence file-override --write ./src/**/**.{ts,js,json,scss,css}"
   },
   "private": true,
   "dependencies": {
