--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "prettier-all": "prettier --loglevel error --config-precedence file-override --write ./src/**/**.{ts,js,json,scss,css}",
-    "release": "npm run build -- --prod --base-href /salary-calculator/",
+    "release": "npm run build -- --configuration production --base-href /salary-calculator/",
     "deploy": "gh-pages --dist dist/salary-calculator"
   },
   "private": true,
