chore: upgrade ng-calculator deps

--- a/packages/ng-calculator/tsconfig.json
+++ b/packages/ng-calculator/tsconfig.json
@@ -2,7 +2,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "./",
+    "baseUrl": "."
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
