chore: 改善项目基础设施工具配置

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,8 +1,9 @@
-package-lock.json
-package.json
 .vscode
 .idea
 .git
-generated/
+.history
+node_modules
+public
+!public/*.js
 dist
-src/conf/dynamic-conf.js
+package.json
