--- a/packages/calculator-core/package.json
+++ b/packages/calculator-core/package.json
@@ -1,18 +1,20 @@
 {
   "name": "calculator-core",
   "version": "1.0.0",
-  "main": "index.ts",
-  "module": "index.ts",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "private": true,
   "type": "module",
   "sideEffects": false,
   "scripts": {
-    "build": "tsc"
+    "build": "rimraf lib tsconfig.tsbuildinfo && tsc -p tsconfig.json"
   },
   "dependencies": {
     "lodash-es": "^4"
   },
   "devDependencies": {
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "rimraf": "^3.0.2"
   }
 }
