--- a/packages/ng-calculator/tsconfig.json
+++ b/packages/ng-calculator/tsconfig.json
@@ -9,5 +9,13 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "references": [
+    {
+      "path": "../react-calculator"
+    },
+    {
+      "path": "../calculator-core"
+    }
+  ]
 }
