--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,10 +1,11 @@
 ---
-printWidth: 120
+printWidth: 80
 tabWidth: 2
 singleQuote: true
 semi: true
 trailingComma: all
 arrowParens: avoid
+quoteProps: as-needed
 overrides:
   - files: '*.{ts,tsx}'
     options:
