--- a/packages/ng-calculator/.stylelintrc
+++ b/packages/ng-calculator/.stylelintrc
@@ -1,6 +1,7 @@
 {
-  "extends": ["stylelint-config-standard", "./csscomb.json"],
-  "plugins": ["stylelint-scss", "stylelint-order"],
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier", "../../csscomb.json"],
+  "plugins": ["stylelint-order"],
+  "ignoreFiles": ["**/*.js", ".?*.js", "**/*.tsx", "**/*.jsx"],
   "rules": {
     "at-rule-no-unknown": null,
     "at-rule-empty-line-before": [
