--- a/packages/ng-calculator/package.json
+++ b/packages/ng-calculator/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
+    "lint:style": "stylelint src/**/*.{scss,css} --fix",
     "e2e": "ng e2e",
     "format": "prettier --config-precedence file-override --write",
     "format:all": "prettier --loglevel error --config-precedence file-override --write ./src/**/**.{ts,js,json,scss,css}",
@@ -58,8 +59,15 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "protractor": "~7.0.0",
+    "stylelint": "~14.6.0",
+    "stylelint-config-standard": "~25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-order": "~5.0.0",
+    "stylelint-scss": "~4.2.0",
     "ts-node": "~8.3.0",
     "typescript": "^4.6.3"
   }
