--- a/packages/react-calculator/.stylelintrc
+++ b/packages/react-calculator/.stylelintrc
@@ -1,7 +1,7 @@
 {
-  "extends": ["stylelint-config-standard-scss", "stylelint-config-recommended-vue/scss", "stylelint-config-prettier", "../../csscomb.json"],
+  "extends": ["stylelint-config-standard-scss","stylelint-config-styled-components", "stylelint-config-prettier", "../../csscomb.json"],
   "plugins": ["stylelint-order"],
-  "ignoreFiles": ["**/*.js", ".?*.js", "**/*.ts", "**/*.tsx", "**/*.jsx"],
+  "ignoreFiles": ["**/*.js", ".?*.js", "**/*.tsx", "**/*.jsx"],
   "rules": {
     "at-rule-no-unknown": null,
     "at-rule-empty-line-before": [
@@ -19,40 +19,33 @@
       }
     ],
     "declaration-colon-newline-after": null,
-    "declaration-block-no-redundant-longhand-properties": null,
-    "declaration-no-important": true,
-    "font-weight-notation": null,
+    "font-weight-notation": "named-where-possible",
     "length-zero-no-unit": null,
-    "keyframes-name-pattern": null,
     "number-no-trailing-zeros": null,
     "selector-list-comma-newline-after": "always-multi-line",
     "selector-type-no-unknown": null,
-    "selector-class-pattern": [
-      "[a-z0-9-_]+",
-      {
-        "severity": "warning"
-      }
-    ],
+    "selector-class-pattern": "[a-z0-9-_]+",
     "selector-id-pattern": "[a-z0-9-_]+",
     "no-empty-source": null,
     "no-descending-specificity": null,
-    "scss/at-rule-no-unknown": true,
-    "scss/at-mixin-pattern": null,
+    "scss/at-rule-no-unknown": [true,
+      {
+        "ignoreAtRules": ["tailwind"]
+      }
+    ],
     "scss/dollar-variable-colon-space-before": "never",
-    "scss/dollar-variable-pattern": null,
     "scss/declaration-nested-properties": "never",
-    "scss/percent-placeholder-pattern": null,
     "scss/selector-no-redundant-nesting-selector": true,
     "selector-pseudo-element-no-unknown": [
       true,
       {
-        "ignorePseudoElements": ["v-deep", "input-placeholder"]
+        "ignorePseudoElements": ["ng-deep"]
       }
     ],
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": ["vertical", "horizontal", "window-inactive", "input-placeholder"]
+        "ignorePseudoClasses": ["vertical", "horizontal", "window-inactive"]
       }
     ],
     "order/order": [
