--- a/packages/react-calculator/package.json
+++ b/packages/react-calculator/package.json
@@ -10,6 +10,7 @@
     "build-prod": "run-s clean build export",
     "clean": "rimraf .next out",
     "lint": "next lint",
+    "lint:style": "stylelint src/**/*.{scss,css} --fix",
     "build-types": "tsc --noEmit --pretty",
     "format": "prettier --config-precedence file-override --write",
     "format:all": "prettier --loglevel error --config-precedence file-override --write ./src/**/**.{ts,tsx,js,jsx,json,scss,css}"
@@ -48,6 +49,14 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
+    "stylelint": "~14.6.0",
+    "stylelint-processor-styled-components": "^1.10.0",
+    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-config-standard": "~25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-order": "~5.0.0",
+    "stylelint-scss": "~4.2.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   },
