--- a/packages/vue-calculator/package.json
+++ b/packages/vue-calculator/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint:style": "stylelint src/**/*.{scss,css,vue} --fix"
   },
   "dependencies": {
     "calculator-core": "workspace:*",
@@ -14,6 +15,18 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.0",
+    "postcss-html": "^1.3.0",
+    "postcss": "^8.4.12",
+    "vite-plugin-stylelint": "^2.1.0",
+    "stylelint": "~14.6.0",
+    "stylelint-config-html": "^1.0.0",
+    "stylelint-config-recommended-vue": "^1.3.0",
+    "stylelint-config-recommended-scss": "^5.0.2",
+    "stylelint-config-standard": "~25.0.0",
+    "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-order": "~5.0.0",
+    "stylelint-scss": "~4.2.0",
     "vite": "^2.9.0"
   }
 }
