--- a/packages/react-calculator/package.json
+++ b/packages/react-calculator/package.json
@@ -1,6 +1,7 @@
 {
   "name": "react-calculator",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,6 +17,11 @@
     "format:all": "prettier --loglevel error --config-precedence file-override --write ./src/**/**.{ts,tsx,js,jsx,json,scss,css}"
   },
   "dependencies": {
+    "@emotion/cache": "^11.7.1",
+    "@emotion/react": "^11.9.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.1",
     "calculator-core": "workspace:*",
     "next": "^12.1.4",
     "next-seo": "^5.4.0",
@@ -25,8 +31,10 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
+    "@types/material-ui": "^0.21.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.44",
+    "@types/react-dom": "^17.0.0",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "autoprefixer": "^10.4.4",
@@ -50,12 +58,12 @@
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "stylelint": "~14.6.0",
-    "stylelint-processor-styled-components": "^1.10.0",
-    "stylelint-config-styled-components": "^0.1.1",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "~25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-styled-components": "^0.1.1",
     "stylelint-order": "~5.0.0",
+    "stylelint-processor-styled-components": "^1.10.0",
     "stylelint-scss": "~4.2.0",
     "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
