--- a/packages/react-calculator/tsconfig.json
+++ b/packages/react-calculator/tsconfig.json
@@ -11,7 +11,6 @@
     "alwaysStrict": true,
     "strictNullChecks": true,
     "noUncheckedIndexedAccess": true,
-
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
@@ -19,23 +18,21 @@
     "noUnusedParameters": true,
     "allowUnreachableCode": false,
     "noFallthroughCasesInSwitch": true,
-
     "target": "es5",
     "outDir": "out",
     "declaration": true,
     "sourceMap": true,
-
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "allowJs": false,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-
     "jsx": "preserve",
+    "jsxImportSource": "@emotion/react",
     "noEmit": true,
     "isolatedModules": true,
     "incremental": true,
-
+    "preserveSymlinks": false,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
