--- a/packages/react-calculator/package.json
+++ b/packages/react-calculator/package.json
@@ -23,6 +23,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.6.1",
     "calculator-core": "workspace:*",
+    "mui-hook-form": "workspace:*",
     "next": "^12.1.4",
     "next-seo": "^5.4.0",
     "react": "^17.0.2",
