--- a/packages/calculator-core/package.json
+++ b/packages/calculator-core/package.json
@@ -11,9 +11,10 @@
     "build": "rimraf lib tsconfig.tsbuildinfo && tsc -p tsconfig.json"
   },
   "dependencies": {
-    "lodash-es": "^4"
+    "lodash-es": "^4.14.0"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.14.0",
     "typescript": "^4.6.3",
     "rimraf": "^3.0.2"
   }
