--- a/packages/ng-calculator/package.json
+++ b/packages/ng-calculator/package.json
@@ -59,13 +59,14 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "ng-lint-staged": "^12.0.3",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "protractor": "~7.0.0",
     "stylelint": "~14.6.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard": "~25.0.0",
     "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint-order": "~5.0.0",
     "stylelint-scss": "~4.2.0",
     "ts-node": "~8.3.0",
