--- a/packages/react-calculator/package.json
+++ b/packages/react-calculator/package.json
@@ -21,17 +21,24 @@
     "@emotion/react": "^11.9.0",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/material": "^5.6.1",
     "calculator-core": "workspace:*",
+    "date-fns": "^2.28.0",
+    "lodash-es": "^4.14.0",
     "mui-hook-form": "workspace:*",
     "next": "^12.1.4",
     "next-seo": "^5.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tslib": "^2.3.1"
+    "react-hook-form": "^7.27.1",
+    "tslib": "^2.3.1",
+    "yup": "^0.32.11",
+    "zustand": "^4.0.0-rc.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.1.4",
+    "@types/lodash-es": "^4.14.0",
     "@types/material-ui": "^0.21.0",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.44",
