--- a/.github/workflows/github-pages-deploy.yml
+++ b/.github/workflows/github-pages-deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install and Build 🔧
         run: |
-          npm ci --force
+          npm install --force
           npm run build
 
       - name: Deploy 🚀
