--- a/packages/react-calculator/.stylelintrc
+++ b/packages/react-calculator/.stylelintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["stylelint-config-standard-scss","stylelint-config-styled-components", "stylelint-config-prettier", "../../csscomb.json"],
+  "extends": ["stylelint-config-standard-scss", "stylelint-config-prettier", "../../csscomb.json"],
   "plugins": ["stylelint-order"],
   "ignoreFiles": ["**/*.js", ".?*.js", "**/*.tsx", "**/*.jsx"],
   "rules": {
