--- a/packages/react-calculator/package.json
+++ b/packages/react-calculator/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --fix",
     "preview": "vite preview",
     "clean": "rimraf .next out",
     "lint:style": "stylelint src/**/*.{scss,css} --fix",
