--- a/packages/ng-calculator/.stylelintrc
+++ b/packages/ng-calculator/.stylelintrc
@@ -28,6 +28,9 @@
     "selector-id-pattern": "[a-z0-9-_]+",
     "no-empty-source": null,
     "no-descending-specificity": null,
+    "value-keyword-case": ["lower", {
+      "ignoreKeywords": ["/[A-Z]\\d+/"]
+    }],
     "scss/at-rule-no-unknown": true,
     "scss/dollar-variable-colon-space-before": "never",
     "scss/declaration-nested-properties": "never",
