feat: upgrade to angular v17

--- a/packages/ng-calculator/angular.json
+++ b/packages/ng-calculator/angular.json
@@ -27,7 +27,7 @@
             "outputPath": "dist/ng-calculator",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "preserveSymlinks": true,
@@ -72,10 +72,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "ng-calculator:build:production"
+              "buildTarget": "ng-calculator:build:production"
             },
             "development": {
-              "browserTarget": "ng-calculator:build:development"
+              "buildTarget": "ng-calculator:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -83,14 +83,14 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-calculator:build"
+            "buildTarget": "ng-calculator:build"
           }
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
