--- a/packages/ng-calculator/package.json
+++ b/packages/ng-calculator/package.json
@@ -28,7 +28,9 @@
     "@angular/router": "^18.2.1",
     "bootstrap": "^4.6.1",
     "calculator-core": "workspace:*",
+    "echarts": "^5.6.0",
     "lodash-es": "^4.17.21",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~6.6.7",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.10"
@@ -43,15 +45,15 @@
     "@angular/cli": "^18.2.1",
     "@angular/compiler-cli": "^18.2.1",
     "@types/jasmine": "~3.6.11",
-    "@types/lodash-es": "4.17.6",
     "@types/lodash": "~4.14.6",
+    "@types/lodash-es": "4.17.6",
     "@types/node": "^12.20.47",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
+    "eslint-plugin-unused-imports": "^3.0.0",
     "gh-pages": "^3.2.3",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.2",
@@ -60,7 +62,6 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
-    "ng-lint-staged": "^12.0.3",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "protractor": "~7.0.0",
