--- a/packages/calculator-core/package.json
+++ b/packages/calculator-core/package.json
@@ -10,8 +10,8 @@
   "scripts": {
     "build": "rimraf lib tsconfig.tsbuildinfo && tsc -p tsconfig.json"
   },
-  "dependencies": {
-    "lodash-es": "^4.14.0"
+  "peerDependencies": {
+    "lodash-es": "^4.17.21"
   },
   "devDependencies": {
     "@types/lodash-es": "~4.17.0",
