--- a/packages/ng-calculator/angular.json
+++ b/packages/ng-calculator/angular.json
@@ -22,7 +22,7 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-builders/custom-esbuild:application",
           "options": {
             "outputPath": {
               "base": "dist/ng-calculator"
@@ -60,6 +60,7 @@
                   "with": "src/environments/environment.prod.ts"
                 }
               ],
+              "plugins": ["esbuild/dedupe-lodash-es.ts"],
               "outputHashing": "all"
             },
             "development": {
@@ -72,7 +73,7 @@
           "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular-builders/custom-esbuild:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "ng-calculator:build:production"
