--- a/packages/ng-calculator/package.json
+++ b/packages/ng-calculator/package.json
@@ -27,15 +27,16 @@
     "@angular/platform-browser-dynamic": "^18.2.1",
     "@angular/router": "^18.2.1",
     "bootstrap": "^4.6.1",
-    "calculator-core": "workspace:latest",
+    "calculator-core": "workspace:calculator-core@*",
     "echarts": "^5.6.0",
     "lodash-es": "^4.17.21",
     "ngx-echarts": "^20.0.0",
-    "rxjs": "~6.6.7",
+    "rxjs": "^7.8.1",
     "tslib": "^2.3.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
+    "@angular-builders/custom-esbuild": "^18.0.0",
     "@angular-devkit/build-angular": "^18.2.1",
     "@angular-eslint/builder": "^18.3.0",
     "@angular-eslint/eslint-plugin": "^18.3.0",
@@ -50,6 +51,7 @@
     "@types/node": "^12.20.47",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "esbuild": "0.23.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
