--- a/packages/ng-calculator/tsconfig.json
+++ b/packages/ng-calculator/tsconfig.json
@@ -19,7 +19,10 @@
     "module": "ES2022",
     "useDefineForClassFields": false,
     "skipLibCheck": true,
-    "lib": ["ES2022", "dom"]
+    "lib": ["ES2022", "dom"],
+    "paths": {
+      "calculator-core": ["./node_modules/calculator-core"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
